# modsurfer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  action.yml  mod.yaml  seed.json
.github/workflows/: ci-action-test.yml  ci-vendor-fastly.yml  ci-vendor-fermyon.yml  ci-vendor-fluvio.yml  ci-vendor-shopify.yml  ci-vendor-suborbital.yml  ci-vendor-tezos.yml  ci-vendor-wasmcloud.yml  publish-latest-image.yml  publish-release-builds.yml  publish-release-image.yml
action/: Dockerfile  README.md
api/: Cargo.toml
api/src/: client.rs  interop.rs  lib.rs  mock_client.rs  sort.rs
cli/: Cargo.toml  README.md
cli/src/: lib.rs  main.rs
cli/src/cmd/: api_result.rs  exec.rs  generate.rs  get.rs  mod.rs  validate.rs
cli/src/plugins/: modsurfer.wasm
convert/: Cargo.toml
convert/src/: from_api.rs  lib.rs  to_api.rs  types.rs
demangle/: Cargo.toml
demangle/src/: lib.rs  main.rs
modsurfer-cli/: Cargo.toml
modsurfer-cli/src/: main.rs
modsurfer-cli/src/cli/: exec.rs  get.rs  mod.rs  validate.rs
modsurfer-cli/src/plugins/: mod.rs  modsurfer.wasm
module/: Cargo.toml
module/src/: function.rs  lib.rs  module.rs  source_language.rs
plugins/: Cargo.toml
plugins/src/: modsurfer.wasm
proto/v1/: Cargo.toml  api.proto  module-no-option.proto
proto/v1/go/: go.mod
proto/v1/go/modsurferpb/: api.pb.go  go.mod  go.sum
proto/v1/php/: AuditModulesRequest.php  AuditModulesResponse.php  AuditOutcome.php  CallPluginRequest.php  CallPluginResponse.php  CreateModuleRequest.php  CreateModuleResponse.php  DeleteModulesRequest.php  DeleteModulesResponse.php  DiffRequest.php  DiffResponse.php  Direction.php  Error.php  Export.php  Field.php  GetModuleGraphRequest.php  GetModuleGraphResponse.php  GetModuleRequest.php  GetModuleResponse.php  Import.php  InstallPluginRequest.php  InstallPluginResponse.php  ListModulesRequest.php  ListModulesResponse.php  Module.php  ModuleGraph.php  PBFunction.php  Pagination.php  SearchModulesRequest.php  SearchModulesResponse.php  Sort.php  SourceLanguage.php  UninstallPluginRequest.php  UninstallPluginResponse.php  ValType.php  ValidateModuleRequest.php  ValidateModuleResponse.php
proto/v1/php/GPBMetadata/Proto/V1/: Api.php  ModuleNoOption.php
proto/v1/src/: api.rs  mod.rs
scripts/: download-wasm.sh
scripts/protobuf-list-modules-response/: Cargo.toml
scripts/protobuf-list-modules-response/src/: main.rs
src/: main.rs
src/cli/: exec.rs  mod.rs
test/: empty.yaml  generated.spidermonkey.mod.yaml  mod-remote.yaml  mod.yaml  plugins.yaml  unknown-fields.yaml  wasi_snapshot_preview1.mod.yaml
validation/: Cargo.toml
validation/src/: diff.rs  lib.rs
vendors/fastly/starter/: mod.yaml
vendors/fastly/static/: mod.yaml
vendors/fastly/websocket/: mod.yaml
vendors/fermyon/http/: http.wasm  mod.yaml
vendors/fermyon/redis/: mod.yaml  redis.wasm
vendors/fluvio/aggregate/: aggregate.wasm  mod.yaml
vendors/fluvio/array-map/: array-map.wasm  mod.yaml
vendors/fluvio/filter/: filter.wasm  mod.yaml
vendors/fluvio/filter-map/: filter-map.wasm  mod.yaml
vendors/fluvio/map/: map.wasm  mod.yaml
vendors/shopify/: discount.wasm  mod.yaml
vendors/suborbital/fetch-test/: fetch-test.wasm  mod.yaml
vendors/suborbital/helloworld-rs/: helloworld-rs.wasm  mod.yaml
vendors/suborbital/log-it/: log-it.wasm  mod.yaml
vendors/suborbital/return-err/: mod.yaml  return-err.wasm
vendors/tezos/: mod.yaml  tx-kernel-no-verif.wasm
vendors/wasmcloud/: actor.wasm  mod.yaml
