[workspace]
members = ["api", "cli", "module", "plugins", "proto/v1", "validation"]

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
modsurfer-api = { path = "api" }
modsurfer-validation = { path = "validation" }
modsurfer-plugins = { path = "plugins" }
modsurfer-convert = { path = "convert", version = "0.1" }
modsurfer-module = { path = "module", version = "0.1" }
modsurfer-proto-v1 = { path = "proto/v1", package = "modsurfer-proto" }
protobuf = "3.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.14"
serde_with = "2.2.0"
tokio = { version = "1", features = ["full"] }
url = "2"
