[package]
name = "modsurfer-cli"
version = "0.0.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.0.18" }
futures = "0.3.25"
human_bytes = "0.4"
log = "0.4.17"
parse-size = "1"
protobuf = "3.2.0"
reqwest = "0.11.16"
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
tokio = { workspace = true }
url = "2.3.1"
modsurfer-api = { workspace = true }
modsurfer-module = { workspace = true }
modsurfer-proto-v1 = { workspace = true }
modsurfer-convert = { workspace = true }
modsurfer-validation = { workspace = true }
comfy-table = "6.1.3"
extism = "0.3.0"

[[bin]]
name = "modsurfer"
path = "src/main.rs"
