[package]
name = "modsurfer-convert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
modsurfer-proto-v1 = { workspace = true }
modsurfer-module = { workspace = true }
protobuf = { workspace = true }
url = { workspace = true }

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
chrono = { workspace = true, optional = true }

[features]
default = ["api"]
api = ["chrono"]
