[package]
name = "modsurfer-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
chrono = "0.4.22"
clap = { version = "4.0.18" }
futures = "0.3.25"
human_bytes = "0.4"
log = "0.4.17"
parse-size = "1"
protobuf = "3.2.0"
reqwest = "0.11.12"
serde = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
url = "2.3.1"
modsurfer = { workspace = true }
modsurfer-proto-v1 = { workspace = true }
modserver-convert = { workspace = true }
modsurfer-web = { workspace = true }

[[bin]]
name = "modsurfer"
path = "src/main.rs"
