[package]
name = "modsurfer-module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, optional = true }
log = { workspace = true }
wasmparser = "0.103.0"
serde = { workspace = true }
url = { workspace = true }

[features]
api = ["chrono"]
