[package]
name = "modsurfer-validation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
futures = "0.3.25"
human_bytes = "0.4"
log = "0.4.17"
parse-size = "1"
protobuf = "3.2.0"
reqwest = "0.11.12"
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
url = "2.3.1"
modsurfer-module = { workspace = true }
modsurfer-proto-v1 = { workspace = true }
modsurfer-convert = { workspace = true }
getrandom = { version = "*", features = ["js"] }

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
extism = "0.2.0"
tokio = { workspace = true }
modsurfer-plugins = { workspace = true }
comfy-table = "6.1.3"
