[package]
name = "protobuf-list-modules-response"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
modserver = { workspace = true }
modsurfer-convert = { workspace = true }
modsurfer = { workspace = true }
protobuf = { workspace = true }
tokio = { workspace = true }
