[package]
name = "protobuf-list-modules-response"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
anyhow = "1"
modsurfer = { path = "../../../private-modsurfer/modsurfer", features = [
    "api",
] }
modsurfer-convert = { path = "../../convert", version = "0.1" }
modsurfer-module = { path = "../../module", version = "0.1", features = [
    "api",
] }
protobuf = "3.2.0"
tokio = { version = "1", features = ["full"] }
